<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/applogo" />

    <Button
        android:id="@+id/introductionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:background="@drawable/btn_blue"
        style="@style/ButtonTextMedium"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyString" 
        android:textSize="10.5sp"/>
    <Button
        android:id="@+id/dataCostButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dataCost"
        android:background="@drawable/btn_blue"
        style="@style/ButtonTextMedium"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyString" 
        android:textSize="10.5sp"/>
    <Button
        android:id="@+id/aboutSoftwareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutSoftware"
        android:background="@drawable/btn_blue"
        style="@style/ButtonTextMedium"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyString" 
        android:textSize="10.5sp"/>
    <Button
        android:id="@+id/termsandconditionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termsandconditions"
        android:background="@drawable/btn_blue"
        style="@style/ButtonTextMedium"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</LinearLayout>