<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/applogo" />

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/DigitalClock"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyString"
        android:textSize="7.5sp" />

    <TextView
        android:id="@+id/setLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />
    
    <TableLayout android:id="@+id/time_table"
        		android:layout_height="wrap_content"
        		android:layout_width="match_parent"
        		android:stretchColumns="0,1">
        		        		        		       		
                <TableRow android:id="@+id/time_table"
                    	android:layout_width="fill_parent"
                    	android:layout_height="wrap_content">

                    <TextView android:background="@drawable/cell_shape" 
                        	android:padding="5dp" 
                        	android:id="@+id/time"
                        	android:gravity="center"
                        	android:layout_width="fill_parent"
                        	android:layout_height="wrap_content" 
                        	android:textAppearance="?android:attr/textAppearanceMedium" 
                        	android:text="@string/timeColumn"/>
                    
                    <TextView android:background="@drawable/cell_shape" 
                        	android:padding="5dp" 
                        	android:id="@+id/destination"
                        	android:gravity="center"
                        	android:layout_width="fill_parent"
                        	android:layout_height="wrap_content" 
                        	android:textAppearance="?android:attr/textAppearanceMedium" 
                        	android:text="@string/destinationColumn"/>
                    
                    <!--<TextView android:background="@drawable/cell_shape" 
                        	android:padding="5dp" 
                        	android:id="@+id/route"
                        	android:gravity="center"
                        	android:layout_width="fill_parent"
                        	android:layout_height="wrap_content" 
                        	android:textAppearance="?android:attr/textAppearanceMedium" 
                        	android:text="@string/routeColumn"/>-->

                </TableRow>
                
                <!-- <TableRow
                    android:id="@+id/time_row"
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content">
			          
			          <TextView android:id="@+id/time"
			              		android:text="Static Button"/>
     			</TableRow>                     -->
                    
            </TableLayout>

</LinearLayout>